# codechecker

./: .clang-format  .editorconfig  Cargo.toml  README.md
src/: bin_utils.rs  checker.rs  ipc.rs  lib.rs  main.rs  process.rs  utils.rs
tests/: accepted.cpp  mle.cpp  test.rs  tle.cpp  wa.py  wrong_answer.cpp
tests/test_cases/: 3.out
