[package]
name = "codechecker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"], optional = true }
libc = { version = "0.2.158", optional = true}
nix = { version = "0.29.0", features = ["signal"], optional = true}
serde = { version = "1.0.210", features = ["derive"], optional = true}
serde_json = { version = "1.0.128", optional = true}
tqdm = {git = "https://github.com/mrlazy1708/tqdm.git", optional = true }

[features]
ipc = ["serde", "serde_json"]
binary = ["clap", "tqdm", "nix", "libc", "ipc"]

[[bin]]
name = "codechecker"
required-features = ["binary"]
